{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 132,
  "lineage": "a0a4c81f-7370-ea8f-9d54-9c4db01da889",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:601397153077:internet-gateway/igw-02f517395d79951a3",
            "id": "igw-02f517395d79951a3",
            "owner_id": "601397153077",
            "tags": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned"
            },
            "vpc_id": "vpc-08e523136a07399e1"
          },
          "dependencies": [
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02f517395d79951a3",
            "id": "r-rtb-05910204f86c91f8e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05910204f86c91f8e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kubernetes-dusanstojnic-com",
            "aws_route_table.kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:601397153077:route-table/rtb-05910204f86c91f8e",
            "id": "rtb-05910204f86c91f8e",
            "owner_id": "601397153077",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned",
              "kubernetes.io/kops/role": "public"
            },
            "tags_all": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned",
              "kubernetes.io/kops/role": "public"
            },
            "vpc_id": "vpc-08e523136a07399e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1a-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096f9fd160dc41a61",
            "route_table_id": "rtb-05910204f86c91f8e",
            "subnet_id": "subnet-0cdcb864a6b2975fc"
          },
          "dependencies": [
            "aws_route_table.kubernetes-dusanstojnic-com",
            "aws_subnet.us-east-1a-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1b-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019b58ced3a9226e3",
            "route_table_id": "rtb-05910204f86c91f8e",
            "subnet_id": "subnet-047eaeb1690731820"
          },
          "dependencies": [
            "aws_route_table.kubernetes-dusanstojnic-com",
            "aws_subnet.us-east-1b-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1c-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ffeb2c8bd8dccac",
            "route_table_id": "rtb-05910204f86c91f8e",
            "subnet_id": "subnet-05a68e55683c787e6"
          },
          "dependencies": [
            "aws_route_table.kubernetes-dusanstojnic-com",
            "aws_subnet.us-east-1c-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "masters-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:601397153077:security-group/sg-0278482a11ff7410e",
            "description": "Security group for masters",
            "egress": [],
            "id": "sg-0278482a11ff7410e",
            "ingress": [],
            "name": "masters.kubernetes.dusanstojnic.com",
            "name_prefix": "",
            "owner_id": "601397153077",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "masters.kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "masters.kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e523136a07399e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes-dusanstojnic-com"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:601397153077:security-group/sg-08708a787e2b38a6a",
            "description": "Security group for nodes",
            "egress": [],
            "id": "sg-08708a787e2b38a6a",
            "ingress": [],
            "name": "nodes.kubernetes.dusanstojnic.com",
            "name_prefix": "",
            "owner_id": "601397153077",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "nodes.kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "nodes.kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e523136a07399e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes-dusanstojnic-com"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-0-0-0-0--0-ingress-tcp-22to22-masters-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-667910505",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0278482a11ff7410e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-0-0-0-0--0-ingress-tcp-22to22-nodes-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3571213572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08708a787e2b38a6a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nodes-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-0-0-0-0--0-ingress-tcp-443to443-masters-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-80471899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0278482a11ff7410e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-masters-kubernetes-dusanstojnic-com-egress-all-0to0-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4016414411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0278482a11ff7410e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-masters-kubernetes-dusanstojnic-com-ingress-all-0to0-masters-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2291548197",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0278482a11ff7410e",
            "self": false,
            "source_security_group_id": "sg-0278482a11ff7410e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-masters-kubernetes-dusanstojnic-com-ingress-all-0to0-nodes-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2446887649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08708a787e2b38a6a",
            "self": false,
            "source_security_group_id": "sg-0278482a11ff7410e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_security_group.nodes-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-kubernetes-dusanstojnic-com-egress-all-0to0-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-782032077",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08708a787e2b38a6a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nodes-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-kubernetes-dusanstojnic-com-ingress-all-0to0-nodes-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3931746500",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08708a787e2b38a6a",
            "self": false,
            "source_security_group_id": "sg-08708a787e2b38a6a",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nodes-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-kubernetes-dusanstojnic-com-ingress-tcp-1to2379-masters-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-107238440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0278482a11ff7410e",
            "self": false,
            "source_security_group_id": "sg-08708a787e2b38a6a",
            "to_port": 2379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_security_group.nodes-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-kubernetes-dusanstojnic-com-ingress-tcp-2382to4000-masters-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2382,
            "id": "sgrule-1942773698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0278482a11ff7410e",
            "self": false,
            "source_security_group_id": "sg-08708a787e2b38a6a",
            "to_port": 4000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_security_group.nodes-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-kubernetes-dusanstojnic-com-ingress-tcp-4003to65535-masters-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4003,
            "id": "sgrule-304162528",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0278482a11ff7410e",
            "self": false,
            "source_security_group_id": "sg-08708a787e2b38a6a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_security_group.nodes-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-kubernetes-dusanstojnic-com-ingress-udp-1to65535-masters-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-3487797437",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0278482a11ff7410e",
            "self": false,
            "source_security_group_id": "sg-08708a787e2b38a6a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.masters-kubernetes-dusanstojnic-com",
            "aws_security_group.nodes-kubernetes-dusanstojnic-com",
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1a-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:601397153077:subnet/subnet-0cdcb864a6b2975fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.32.0/19",
            "id": "subnet-0cdcb864a6b2975fc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601397153077",
            "tags": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "us-east-1a.kubernetes.dusanstojnic.com",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "us-east-1a.kubernetes.dusanstojnic.com",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08e523136a07399e1"
          },
          "dependencies": [
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1b-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:601397153077:subnet/subnet-047eaeb1690731820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.64.0/19",
            "id": "subnet-047eaeb1690731820",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601397153077",
            "tags": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "us-east-1b.kubernetes.dusanstojnic.com",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "us-east-1b.kubernetes.dusanstojnic.com",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08e523136a07399e1"
          },
          "dependencies": [
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1c-kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:601397153077:subnet/subnet-05a68e55683c787e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.96.0/19",
            "id": "subnet-05a68e55683c787e6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601397153077",
            "tags": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "us-east-1c.kubernetes.dusanstojnic.com",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "us-east-1c.kubernetes.dusanstojnic.com",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08e523136a07399e1"
          },
          "dependencies": [
            "aws_vpc.kubernetes-dusanstojnic-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes-dusanstojnic-com",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:601397153077:vpc/vpc-08e523136a07399e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0eb4b88e48177e407",
            "default_route_table_id": "rtb-0fa568c9178e64289",
            "default_security_group_id": "sg-0965e282a6ca0c558",
            "dhcp_options_id": "dopt-19e79562",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08e523136a07399e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa568c9178e64289",
            "owner_id": "601397153077",
            "tags": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "kubernetes.dusanstojnic.com",
              "Name": "kubernetes.dusanstojnic.com",
              "kubernetes.io/cluster/kubernetes.dusanstojnic.com": "owned"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}